Bug 155319 - Data bars appear incorrectly after copying
Summary: Data bars appear incorrectly after copying
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.6.0 target:7.5.5
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-15 12:14 UTC by NISZ LibreOffice Team
Modified: 2023-05-25 08:35 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (8.99 KB, application/vnd.oasis.opendocument.spreadsheet)
2023-05-15 12:16 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-05-15 12:14:57 UTC
Description:
When copying data tracks, the paste is displayed incorrectly.


Steps to Reproduce:
1. Open the attached file in Writer.
2. Copy B3:D3 cells.
3. Paste anywhere.

Actual Results:
After pasting, the cells are displayed incorrectly.

Expected Results:
After pasting, the cells are displayed correctly.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6f1534940ac12ff8e46f4782e18cfb6cf585da39
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2023-05-15 12:16:15 UTC
Created attachment 187287 [details]
Sample file
Comment 2 NISZ LibreOffice Team 2023-05-15 12:29:59 UTC
Steps to Reproduce:
1. Open the attached file in Calc.
2. Copy B3:D3 cells.
3. Paste anywhere.
Comment 3 m_a_riosv 2023-05-15 22:15:59 UTC
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6f1534940ac12ff8e46f4782e18cfb6cf585da39
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded

The CF range is broken for single cells.
Comment 4 Commit Notification 2023-05-22 11:33:23 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8af6c46a9c0e86bbbd908e96ff236ad1d6c4ddab

tdf#155319 sc: fix conditional format data bar after copying

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 NISZ LibreOffice Team 2023-05-24 10:21:05 UTC
VERIFIED IN:
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: f3aab159f1c1e00c25e6b4ca1e50813bc343f4f3
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded
Comment 6 Commit Notification 2023-05-25 08:35:59 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/c0529c1c3aa6d905b9e4824054c6f9effab329b7

tdf#155319 sc: fix conditional format data bar after copying

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.