tdf#155319 sc: fix conditional format data bar after copying

This is a follow up to commit I064fb3fe0443705553c6bbfcc34f2d717e0f6bd6
(tdf#154906 tdf#129813 tdf#129814 sc: fix conditional format color
 scale)

Change-Id: Iacc1f5af762e1f6a40ecd13c33384e4a3340822a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151860
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152115